[tool.poetry]
name = "anchor-staking"
version = "0.1.0"
description = ""
authors = ["Michael Jordan <mjthecoder53161@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.75.2"}
requests = "^2.27.1"
terra-sdk = "^2.0.6"
pandas = "^1.4.2"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
